--- a/web/todoooohskaaaa/index.html
+++ b/web/todoooohskaaaa/index.html
@@ -16,5 +16,12 @@
     <input class="date" type="date" id = "date">
     <ul id = "list" >
     </ul>
+    <hr>
+    <div class="a">
+        <a id = "done-link" href="#">сделано()</a>
+        <a id = "notdone-link" href="#">не сделано()</a>
+        <a id = "all-link" href="#">все</a>
+    </div>
+
 </body>
 </html>
